--- a/FTPTools/FTPTools.csproj
+++ b/FTPTools/FTPTools.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="FluentFTP" Version="48.0.3" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.1" />
+    <PackageReference Include="Polly" Version="8.1.0" />
   </ItemGroup>
 
   <ItemGroup>
