--- a/FTPTools/FTPTools.csproj
+++ b/FTPTools/FTPTools.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\SystemTools\SystemToolsShared\SystemToolsShared.csproj" />
+    <ProjectReference Include="..\ConnectTools\ConnectTools.csproj" />
   </ItemGroup>
 
   <ItemGroup>
