--- a/ConnectionTools/ConnectionTools.csproj
+++ b/ConnectionTools/ConnectionTools.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
     <PropertyGroup>
-        <PackageId>ApAgentData</PackageId>
+        <PackageId>ConnectionTools</PackageId>
         <Version>1.0.0</Version>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     </PropertyGroup>
