--- a/ConnectionTools/ConnectionTools.csproj
+++ b/ConnectionTools/ConnectionTools.csproj
@@ -13,6 +13,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\ConnectionTools.ConnectTools.Tests\ConnectionTools.ConnectTools.Tests.csproj" />
       <ProjectReference Include="..\ConnectionTools.ConnectTools\ConnectionTools.ConnectTools.csproj" />
       <ProjectReference Include="..\ConnectionTools.CToolsFactory\ConnectionTools.CToolsFactory.csproj" />
       <ProjectReference Include="..\ConnectionTools.FTPTools\ConnectionTools.FTPTools.csproj" />
